# adri-standards

./: ADRI-Validator-Releases.md  ADRI_VALIDATOR_RELEASES.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
adri_standards.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: README.md  configuration.md  custom-rules.md
examples/frameworks/: adri_protected_decorator_example.py  autogen_basic.py  crewai_basic.py  generic_basic.py  haystack_basic.py  langchain_basic.py  langgraph_basic.py  llamaindex_basic.py  semantic_kernel_basic.py
examples/frameworks/ADRI/dev/standards/: customer_service_agent_customer_data_standard.yaml  data_processor_input_data_standard.yaml  high_priority_customer_agent_customer_data_standard.yaml  sales_analyzer_sales_data_standard.yaml  user_profile_analyzer_user_data_standard.yaml
standards/: __init__.py  core.py
standards/config/: default.yaml
tools/: cli.py  standards.py
